<resources>
    <string name="app_name">Media Library</string>
    <string name="app_description">Find and note your favorite games, movies, TV shows and books</string>
    <string name="button_sign_in_text">Sign In with Google</string>
    <string name="app_logo">App logo</string>
    <string name="menu_games">Games</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tv_shows">TV shows</string>
    <string name="menu_books">Books</string>
    <string name="search_games">Search games</string>
    <string name="search_movies">Search movies</string>
    <string name="search_tv_shows">Search TV shows</string>
    <string name="search_books">Search books</string>
    <string name="title_form_create">Add</string>
    <string name="title_form_edit">Edit</string>
    <string name="title_form_game">game</string>
    <string name="title_form_movie">movie</string>
    <string name="title_form_tv_show">TV show</string>
    <string name="title_form_book">book</string>
    <string name="hint_title">Title</string>
    <string name="hint_year">Year</string>
    <string name="hint_status">Status</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_year_invalid">Year is incorrect</string>
    <string name="action_form_save">Save</string>
    <string name="action_profile">Profile</string>
    <string name="description_profile_image">Profile image</string>
    <string name="button_sign_out">Sign out</string>
    <string name="action_clear">Clear</string>
    <string name="item_image_description">Image</string>
    <string name="status_planned">Planned</string>
    <string name="status_in_progress">Started</string>
    <string name="status_finished">Finished</string>
    <string name="set_planned">Mark as planned</string>
    <string name="set_in_progress">Mark as started</string>
    <string name="set_finished">Mark as finished</string>
    <string name="edit_item">Edit</string>
    <string name="remove_item">Remove from my library</string>
    <string name="search_item">Find in web</string>
</resources>
